[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/code/MK_Level/MK_Orion.gd" type="Script" id=1]
[ext_resource path="res://assets/art/rooftop_level/sprites/S8_orion_enemy/S8_orion_enemy_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/art/rooftop_level/sprites/S8_orion_enemy/S8_orion_enemy_attack.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/object_sounds/MK_Level/Orion_Idle.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/object_sounds/MK_Level/Hurt_Orion.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "throw",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 7, 20 )

[sub_resource type="CapsuleShape2D" id=19]
height = 27.1102

[node name="Orion" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "idle"

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.5, 6 )
scale = Vector2( 1.55, 2.3 )
process_parent = true
physics_process_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 18 )

[node name="spear_spawn" type="Node2D" parent="."]
position = Vector2( -14, -7 )

[node name="Idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[node name="Tween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="Dmg_Player" type="Area2D" parent="."]
collision_layer = 0

[node name="Dmg_Player_Shape" type="CollisionShape2D" parent="Dmg_Player"]
position = Vector2( 0, 6.368 )
shape = SubResource( 19 )
[connection signal="collision" from="." to="." method="_on_Orion_collision"]
[connection signal="death" from="." to="." method="_on_Orion_death"]
[connection signal="health_changed" from="." to="." method="_on_Orion_health_changed"]
[connection signal="body_entered" from="Dmg_Player" to="." method="_on_Dmg_Player_body_entered"]
